deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-k8
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-k8
  template:
    metadata:
      labels:
        app: spring-k8
    spec:
      containers:
        - name: spring-k8
          image: kashish2597/spring-k8:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"  # Requests 250 millicores (0.25 CPU)
            limits:
              cpu: "500m"  # Max 0.5 CPU
