loadBalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: spring-k8s-balancer
spec:
  type: LoadBalancer
  selector:
    app: spring-k8
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
